# KrohaLib

./: CMakeLists.txt  README.md  main.cpp
include/KrohaLib/: Bytes.hpp  Chars.hpp  Console.hpp  Memory.hpp  Result.hpp  Types.hpp
include/KrohaLib/Dos/: Console.hpp
include/KrohaLib/Linux/: Console.hpp
include/KrohaLib/Windows/: Console.hpp
make/: VC5.bat  VC6.bat
source/: Bytes.cpp  Bytes.hpp  Chars.cpp  Chars.hpp  Result.cpp
source/Dos/: Console.cpp
source/Linux/: Console.cpp  Memory.cpp
source/Windows/: Console.cpp
